trying to fix the white space on the right hand side

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,10 +22,10 @@ body{
   .main{
     padding: 0;
     margin: 0;
-    .container-fluid{
-      padding: 0;
-      margin: 0;
-    }
+    //.container-fluid{
+    //  padding: 0;
+    //  margin: 0;
+    //}
     #main-container{
       //padding-bottom: 200px; //trying to get footer down
     }
